# example_flatbuffers

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  CMakeSettings.json  README.md
doc/src/: index.md
include/: message_schema.fbs
src/: main.cpp  message_schema_generated.h  schema.fbs  schema_generated.h
